--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,8 @@ body {
 
 
 .table {
-    position: absolute;
-    bottom: 100px;
+    position: relative;
+    bottom: -200px;
     left: 700px;
     display: flex;
     width: 1000px;
@@ -58,7 +58,7 @@ body {
     
 }
 
-.box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9 {
+.box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9, .box1i, .box2i, .box3i, .box4i, .box5i, .box6i, .box7i, .box8i, .box9i {
     background-color: red;
     width: 200px;
     height: 200px;
@@ -76,7 +76,7 @@ box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
 
 
 
-@keyframes example {
+@keyframes flip {
     from {background-color: red; transform: rotateY(0deg);}
     to {background-color: yellow; transform: rotateY(180deg);}
 }
