--- a/css/style.css
+++ b/css/style.css
@@ -49,45 +49,85 @@ body {
 
 
 .table {
-    position: relative;
-    bottom: -200px;
-    left: 700px;
+    margin-top:130px;
+    margin-left: 390px;
     display: flex;
-    width: 1000px;
+    width: 970px;
     flex-wrap:wrap;
     
 }
-
-.box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9, .box1i, .box2i, .box3i, .box4i, .box5i, .box6i, .box7i, .box8i, .box9i {
-    background-color: red;
-    width: 200px;
-    height: 200px;
-    border: solid white;
+.box1,.box2, .box3, .box4, .box5, .box6, .box7, .box7, .box8, .box9{
+    
+    width: 170px;
+    height: 170px;
     margin: 10px;
+    
+    border: solid white;
     animation-fill-mode: forwards;
     animation-duration: 0.5s;
     transform: rotateY(0deg);
-    -webkit-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
+    transform-style: preserve-3d;
+    animation-fill-mode: forwards;
+    animation-duration: 0.5s;
+    transform: rotateY(0deg)
+          -webkit-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);  
+    
+}
+.front {
+    background-color: #006600;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(0deg);
+    backface-visibility: hidden;
+    color: black;
+
     
     
 }
+.back {
+    background-color: white;
+    margin
+    position: absolute;
+    width: 100%;
+    height: 100%;
 
+    
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    color: black;
+    
+    
+}
 
 
 @keyframes flip {
-    from {background-color: red; transform: rotateY(0deg);}
-    to {background-color: yellow; transform: rotateY(180deg);}
+    from {transform: rotateY(0deg);}
+    to {transform: rotateY(180deg);}
+}
+
+@keyframes unflip {
+    from {transform: rotateY(180deg);}
+    to {transform: rotateY(0deg);}
 }
 
 h1 {
-    margin-top: 60px;
+    margin-top: 50px;
     margin-left: 75px;
     font-size: 60px;
 }
-    
+p {
+    background-color: aqua;
+}
   
+img {
+    padding: 18px;
+    margin-left: 6px;
+    width: 120px;
+    height: 120px;
+}
 
 
 
