--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,11 @@ body {
 
 
 .table {
-    margin-top:130px;
+    margin-top:80px;
     margin-left: 390px;
     display: flex;
     width: 970px;
     flex-wrap:wrap;
-    
 }
 .box1,.box2, .box3, .box4, .box5, .box6, .box7, .box7, .box8, .box9{
     
@@ -70,9 +69,9 @@ body {
     animation-fill-mode: forwards;
     animation-duration: 0.5s;
     transform: rotateY(0deg)
-          -webkit-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);  
+    -webkit-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);  
     
 }
 .front {
@@ -83,7 +82,7 @@ box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
     transform: rotateY(0deg);
     backface-visibility: hidden;
     color: black;
-
+    cursor: pointer;
     
     
 }
@@ -114,8 +113,7 @@ box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.75);
 }
 
 h1 {
-    margin-top: 50px;
-    margin-left: 75px;
+    padding: 0px;
     font-size: 60px;
 }
 p {
@@ -129,6 +127,19 @@ img {
     height: 120px;
 }
 
+li {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
-
-
+.moves {
+    position: absolute;
+    top:115px;
+    right: 410px;
+    font-size: 40px;
+    
+}
+.swal2-overlay {
+  background-color: white;
+}
