--- a/css/mobile.css
+++ b/css/mobile.css
@@ -50,15 +50,15 @@ body {
 
 .table {
     margin-top:80px;
-    margin-left: 390px;
+    margin-left: 0px;
     display: flex;
-    width: 800px;
+    width: 310px;
     flex-wrap:wrap;
 }
 .box1,.box2, .box3, .box4, .box5, .box6, .box7, .box7, .box8, .box9{
     
-    width: 150px;
-    height: 150px;
+    width: 50px;
+    height: 50px;
     margin: 10px;
     border: solid white;
     animation-fill-mode: forwards;
@@ -109,19 +109,15 @@ body {
     to {transform: rotateY(0deg);}
 }
 
-
-.title {
-    font-family: 'Sigmar One', cursive;
-    margin-left: 370px;
-    font-size: 60px;    
-    text-shadow: rgb(0, 0, 0) 2px 0px 0px, rgb(0, 0, 0) 1.75px 0.966667px 0px, rgb(0, 0, 0) 1.08333px 1.68333px 0px, rgb(0, 0, 0) 0.133333px 2px 0px, rgb(0, 0, 0) -0.833333px 1.81667px 0px, rgb(0, 0, 0) -1.6px 1.2px 0px, rgb(0, 0, 0) -1.98333px 0.283333px 0px, rgb(0, 0, 0) -1.86667px -0.7px 0px, rgb(0, 0, 0) -1.3px -1.51667px 0px, rgb(0, 0, 0) -0.416667px -1.95px 0px, rgb(0, 0, 0) 0.566667px -1.91667px 0px, rgb(0, 0, 0) 1.41667px -1.41667px 0px, rgb(0, 0, 0) 1.91667px -0.566667px 0px;
+p {
+    background-color: aqua;
 }
   
 img {
-    padding: 18px;
-    margin-left: 6px;
-    width: 100px;
-    height: 100px;
+    padding: 1px;
+    margin-left: px;
+    width: 45px;
+    height: 45px;
 }
 
 li {
@@ -132,26 +128,31 @@ li {
 
 .moves {
     position:absolute;
-    bottom: -180px;
-    margin-left: 1100px;
-    font-size: 40px;
+    bottom: -80px;
+    margin-left: 200px;
+    font-size: 20px;
     font-family: 'Sigmar One', cursive;
     text-shadow: rgb(0, 0, 0) 2px 0px 0px, rgb(0, 0, 0) 1.75px 0.966667px 0px, rgb(0, 0, 0) 1.08333px 1.68333px 0px, rgb(0, 0, 0) 0.133333px 2px 0px, rgb(0, 0, 0) -0.833333px 1.81667px 0px, rgb(0, 0, 0) -1.6px 1.2px 0px, rgb(0, 0, 0) -1.98333px 0.283333px 0px, rgb(0, 0, 0) -1.86667px -0.7px 0px, rgb(0, 0, 0) -1.3px -1.51667px 0px, rgb(0, 0, 0) -0.416667px -1.95px 0px, rgb(0, 0, 0) 0.566667px -1.91667px 0px, rgb(0, 0, 0) 1.41667px -1.41667px 0px, rgb(0, 0, 0) 1.91667px -0.566667px 0px;
     
 }
 .timer {
     position:absolute;
-    bottom: -140px;
-    margin-left: 1100px;
-    font-size: 40px;
+    bottom: -80px;
+    margin-left: px;
+    font-size: 20px;
     font-family: 'Sigmar One', cursive;
     text-shadow: rgb(0, 0, 0) 2px 0px 0px, rgb(0, 0, 0) 1.75px 0.966667px 0px, rgb(0, 0, 0) 1.08333px 1.68333px 0px, rgb(0, 0, 0) 0.133333px 2px 0px, rgb(0, 0, 0) -0.833333px 1.81667px 0px, rgb(0, 0, 0) -1.6px 1.2px 0px, rgb(0, 0, 0) -1.98333px 0.283333px 0px, rgb(0, 0, 0) -1.86667px -0.7px 0px, rgb(0, 0, 0) -1.3px -1.51667px 0px, rgb(0, 0, 0) -0.416667px -1.95px 0px, rgb(0, 0, 0) 0.566667px -1.91667px 0px, rgb(0, 0, 0) 1.41667px -1.41667px 0px, rgb(0, 0, 0) 1.91667px -0.566667px 0px;
     
 }
-
 .score {
     position:relative;
-    top: -640px;
-    left: 1140px;
-    margin-left:-80px;
+    top: -380px;
+    left: 290px;
+    margin-left:-100px;
+}
+.title {
+    font-family: 'Sigmar One', cursive;
+    margin-left: 40px;
+    font-size: 17px;    
+    text-shadow: rgb(0, 0, 0) 2px 0px 0px, rgb(0, 0, 0) 1.75px 0.966667px 0px, rgb(0, 0, 0) 1.08333px 1.68333px 0px, rgb(0, 0, 0) 0.133333px 2px 0px, rgb(0, 0, 0) -0.833333px 1.81667px 0px, rgb(0, 0, 0) -1.6px 1.2px 0px, rgb(0, 0, 0) -1.98333px 0.283333px 0px, rgb(0, 0, 0) -1.86667px -0.7px 0px, rgb(0, 0, 0) -1.3px -1.51667px 0px, rgb(0, 0, 0) -0.416667px -1.95px 0px, rgb(0, 0, 0) 0.566667px -1.91667px 0px, rgb(0, 0, 0) 1.41667px -1.41667px 0px, rgb(0, 0, 0) 1.91667px -0.566667px 0px;
 }
